--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
     "css-loader": "^0.25.0",
+    "cssnano": "^3.7.6",
     "enzyme": "^2.4.1",
     "expect": "^1.20.2",
     "express": "^4.13.4",
@@ -21,6 +22,7 @@
     "jsdom": "^9.5.0",
     "mocha": "^2.5.3",
     "node-sass": "^3.10.0",
+    "optimize-css-assets-webpack-plugin": "^1.3.0",
     "react": "^15.1.0",
     "react-addons-test-utils": "^15.2.1",
     "react-dom": "^15.1.0",
