--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "expect": "^1.20.2",
     "express": "^4.13.4",
     "extract-text-webpack-plugin": "^1.0.1",
+    "html-webpack-plugin": "^2.22.0",
     "jsdom": "^9.5.0",
     "mocha": "^2.5.3",
     "node-sass": "^3.10.0",
