--- a/package.json
+++ b/package.json
@@ -20,11 +20,13 @@
     "express": "^4.13.4",
     "extract-text-webpack-plugin": "^1.0.1",
     "html-webpack-plugin": "^2.22.0",
+    "ignore-styles": "^5.0.1",
     "jsdom": "^9.5.0",
     "mocha": "^2.5.3",
     "node-sass": "^3.10.0",
     "optimize-css-assets-webpack-plugin": "^1.3.0",
     "react": "^15.1.0",
+    "react-addons-test-utils": "^15.3.2",
     "react-dom": "^15.1.0",
     "sass-loader": "^4.0.2",
     "style-loader": "^0.13.1",
@@ -32,8 +34,8 @@
     "webpack-dev-middleware": "^1.6.1"
   },
   "scripts": {
-    "test": "mocha --recursive --require babel-register ignore-styles || true",
-    "test:watch": "mocha --watch --recursive --require babel-register ignore-styles || true",
+    "test": "mocha --recursive --require babel-register --require ignore-styles || true",
+    "test:watch": "mocha --watch --recursive --require babel-register --require ignore-styles || true",
     "build": "NODE_ENV=production webpack -p",
     "start": "node server.js"
   },
