--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-addons-test-utils": "^15.3.2",
     "react-dom": "^15.1.0",
     "sass-loader": "^4.0.2",
+    "sinon": "^1.17.6",
     "style-loader": "^0.13.1",
     "webpack": "^1.13.0",
     "webpack-dev-middleware": "^1.6.1"
