--- a/package.json
+++ b/package.json
@@ -1,46 +1,50 @@
 {
-  "name": "Project",
+  "name": "webpack-react-demo",
   "version": "1.0.0",
   "description": "",
-  "main": "gulpfile.babel.js",
-  "dependencies": {
-    "bourbon": "^4.2.7",
-    "normalize.css": "^4.2.0"
-  },
-  "devDependencies": {
-    "babel-core": "^6.7.6",
-    "babel-loader": "^6.2.4",
-    "babel-plugin-transform-object-rest-spread": "^6.8.0",
-    "babel-preset-es2015": "^6.6.0",
-    "babel-preset-react": "^6.5.0",
-    "css-loader": "^0.25.0",
-    "cssnano": "^3.7.6",
-    "enzyme": "^2.4.1",
-    "expect": "^1.20.2",
-    "express": "^4.13.4",
-    "extract-text-webpack-plugin": "^1.0.1",
-    "html-webpack-plugin": "^2.22.0",
-    "ignore-styles": "^5.0.1",
-    "jsdom": "^9.5.0",
-    "mocha": "^2.5.3",
-    "node-sass": "^3.10.0",
-    "optimize-css-assets-webpack-plugin": "^1.3.0",
-    "react": "^15.1.0",
-    "react-addons-test-utils": "^15.3.2",
-    "react-dom": "^15.1.0",
-    "sass-loader": "^4.0.2",
-    "sinon": "^1.17.6",
-    "style-loader": "^0.13.1",
-    "webpack": "^1.13.0",
-    "webpack-dev-middleware": "^1.8.4",
-    "webpack-dev-server": "^1.16.2"
-  },
+  "main": "index.js",
   "scripts": {
-    "test": "mocha --recursive --require babel-register --require ignore-styles || true",
-    "test:watch": "mocha --watch --recursive --require babel-register --require ignore-styles || true",
-    "build": "NODE_ENV=production webpack -p --progress",
-    "dev": "webpack-dev-server"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "webpack-dev-server --config webpack.dev.babel.js",
+    "build": "webpack --config webpack.prod.babel.js --progress"
   },
+  "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "babel-core": "^6.24.1",
+    "babel-loader": "^7.0.0",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "babel-preset-env": "^1.4.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "browser-sync": "^2.24.4",
+    "browser-sync-webpack-plugin": "^2.2.2",
+    "css-loader": "^0.28.1",
+    "extract-text-webpack-plugin": "^4.0.0-beta.0",
+    "file-loader": "^1.1.11",
+    "html-loader": "^0.5.5",
+    "html-webpack-plugin": "^3.2.0",
+    "imagemin-webpack-plugin": "^2.1.5",
+    "node-sass": "^4.9.0",
+    "optimize-css-assets-webpack-plugin": "^4.0.1",
+    "postcss-loader": "^2.1.5",
+    "prop-types": "^15.6.1",
+    "react": "^16.3.2",
+    "react-dom": "^16.3.2",
+    "rebass": "^2.0.0-2",
+    "sass-loader": "^7.0.1",
+    "style-loader": "^0.21.0",
+    "styled-components": "^3.2.6",
+    "styled-system": "^2.2.5",
+    "styled-theming": "^2.2.0",
+    "uglifyjs-webpack-plugin": "^1.2.5",
+    "webpack": "^4.8.3",
+    "webpack-cli": "^2.1.3",
+    "webpack-dev-server": "^3.1.4",
+    "webpack-merge": "^4.1.2"
+  },
+  "dependencies": {
+    "normalize.css": "^8.0.0"
+  }
 }
